03、netcorek8s-gpu.yml
#将Pod调度在指定label的node上#
apiVersion: v1
kind: Pod
metadata:
  name: netcorek8s-gpu
spec:
  nodeSelector:
    gpu: "true"
  containers:
  - image: refactor2/netcorek8s:1.0
    name: netcorek8s
    ports:
    - containerPort: 43300
      protocol: TCP
