05、netcorek8s-svc-headless.yml
apiVersion: v1
kind: Service
metadata:
  name: netcorek8ssvc-headless
spec:
  clusterIP: None
  ports:
  - port: 13300
    targetPort: 43300
  selector:
    apprs: netcorek8s
