05、netcorek8s-svc-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: netcorek8ssvc-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 13300
    targetPort: 43300
    nodePort: 32001
  selector:
    apprs: netcorek8s
