05、netcorek8s-svc-sessionAffinity.yml
apiVersion: v1
kind: Service
metadata:
  name: netcorek8ssvc
spec:
  sessionAffinity: ClientIP
  ports:
  - port: 13300
    targetPort: 43300
  selector:
    apprs: netcorek8s
