05、netcorek8s-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: netcorek8s
spec:
  rules:
  - host: netcorek8s.refactor.com
    http:
      paths:
      - path: /
        backend:
          serviceName: netcorek8ssvc-nodeport
          servicePort: 13300
